added a line of text

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     </head>
     <body>
         <h1><bold>Hello Doug!</bold></h1>
+        <h3><em>This is some extra text</em></h3>
     </body>
 </html>
