--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Test Website</title>
     </head>
     <body>
-        <h1><bold>Hello Doug!</bold></h1>
+        <h1><bold>Hello Douglas!</bold></h1>
         <h3><em>This is some extra text</em></h3>
     </body>
 </html>
