--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </head>
     <body>
         <h1><bold>Hello Douglas!</bold></h1>
-        <h3><em>This is some extra text</em></h3>
+        <h3><em>Douglas made this file.</em></h3>
     </body>
 </html>
