--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Test Website</title>
     </head>
     <body>
-        <h1><bold>Hello Douglas!</bold></h1>
-        <h3><em>Douglas made this file.</em></h3>
+        <h1><bold>Hello Earth!</bold></h1>
+        <h3><em>Doug made this file.</em></h3>
     </body>
 </html>
